modified password email sender

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.sql.init.mode=always
 #mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=mo.aitsliman@gmail.com
-spring.mail.password=czjfawtbpamibbjf
+spring.mail.username=aitsliman.business@gmail.com
+spring.mail.password=yzehxmqagocfsgpg
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
