updated mysql properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,20 @@
+#spring.jpa.database=mysql
+#server.port=8081
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/testback
+#spring.datasource.username=root
+#spring.datasource.password=mounir123
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.show-sql=true
+#server.error.include-message=always
+#spring.sql.init.mode=always
+
 spring.jpa.database=mysql
 server.port=8081
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/testback
+spring.datasource.url=jdbc:mysql://containers-us-west-65.railway.app:5698/railway
 spring.datasource.username=root
-spring.datasource.password=mounir123
+spring.datasource.password=0egsHaid8d32aMwUyhdY
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 server.error.include-message=always
